--- a/.github/workflows/jira-sync.yml
+++ b/.github/workflows/jira-sync.yml
@@ -13,6 +13,6 @@ jobs:
           jira_url: 'https://githubtraining.atlassian.net'
           jira_user: '${{ secrets.JIRA_USER }}'
           jira_token: '${{ secrets.JIRA_TOKEN }}'
-          jira_project: '${{ secrets.JIRA_PROJECT_KEY'
+          jira_project: '${{ secrets.JIRA_PROJECT_KEY }}'
           github_token: '${{ secrets.PERSONAL_ACCESS_TOKEN }}'
           sync_direction: 'gh2jira'
